Upgrade lib versions. Code cleanup.